Added html skeleton and throwing params to detail controller

--- a/www/app/locations/location-detail/location-detail.html
+++ b/www/app/locations/location-detail/location-detail.html
@@ -1,5 +1,6 @@
 <ion-view view-title="">
     <ion-content>
         <h1>Hi bob marley</h1>
+        <p>Location id: {{ctrl.id}}</p>
     </ion-content>
 </ion-view>
