--- a/www/app/locations/locations-list/locations-list.html
+++ b/www/app/locations/locations-list/locations-list.html
@@ -18,7 +18,7 @@
                 <!-- an enchanced for loop (foreach loop) -->
                 <ion-item class="item-icon-right" 
                           ng-repeat="location in ctrl.locations | orderBy: 'name'"
-                          ui-sref="app.details">
+                          ui-sref="app.details({ id: location.id })">
                     {{location.name}}
                     <i class="icon ion-chevron-right"></i>
                 </ion-item>
