--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
   <link href="css/ionic.app.css" rel="stylesheet">
   <script src="lib/jquery/dist/jquery.min.js"></script>
   <script src="lib/lodash/lodash.min.js"></script>
+
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/js/ionic.bundle.js"></script>
   <script src="lib/ngCordova/dist/ng-cordova.js"></script>
@@ -15,6 +16,9 @@
   <script src="lib/moment/min/moment.min.js"></script>
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
+  <script src='lib/angular-simple-logger/dist/index.js'></script>
+  <script src='lib/angular-google-maps/dist/angular-google-maps_dev_mapped.min.js'></script>
+  <script src='lib/angular-google-maps/dist/angular-google-maps.min.js'></script>
   <!-- your app's js -->
   <script src="js/app.js"></script>
 </head>
