--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
   <title></title>
   <!-- compiled css output -->
   <link href="css/ionic.app.css" rel="stylesheet">
+  <link href="css/rivercity/style.css" rel="stylesheet">
   <script src="lib/jquery/dist/jquery.min.js"></script>
   <script src="lib/lodash/lodash.min.js"></script>
 
