--- a/www/app/home/home.html
+++ b/www/app/home/home.html
@@ -1,6 +1,6 @@
 <ion-view>
     <ion-content padding="true">
-        <div class="riconlogo" style="font-size: 20em; text-align: center;"></div>
+        <div class="riconlogo" style="font-size: 20em; text-align: center; background-color: #95D3C3; border-radius: 2px;"></div>
         <button class="button button-block button-royal" ui-sref="app.entertainment">
             Entertainment
         </button>
