--- a/www/app/locations/location-detail/location-detail.html
+++ b/www/app/locations/location-detail/location-detail.html
@@ -1,5 +1,8 @@
 <ion-view view-title="{{ctrl.location.name}}">
     <ion-content>
+        <div>
+            <ui-gmap-google-map center='map.center' zoom='map.zoom'></ui-gmap-google-map>
+        </div>
         <div class="list">
             <label class="item item-input item-stacked-label item-text-wrap">
                 <span class="input-label">Address</span>
@@ -25,6 +28,5 @@
                 </p>
             </label>
         </div>
-        <ui-gmap-google-map center='ctrl.map.center' zoom='ctrl.map.zoom'></ui-gmap-google-map>
     </ion-content>
 </ion-view>
