--- a/www/index.html
+++ b/www/index.html
@@ -18,9 +18,9 @@
   <script src="cordova.js"></script>
   <script src='lib/angular-simple-logger/dist/index.js'></script>
 
-  <script async defer
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4KlUuej_XNDxUr3g1_KM1izg4ARytjTk&callback=initMap">
-  </script>
+  <!--<script async defer-->
+          <!--src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4KlUuej_XNDxUr3g1_KM1izg4ARytjTk&callback=initMap">-->
+  <!--</script>-->
 
 
   <script src='lib/angular-google-maps/dist/angular-google-maps_dev_mapped.min.js'></script>
