--- a/www/index.html
+++ b/www/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <!-- Enable all requests, inline styles, and eval() -->
+  <!--<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">-->
   <title></title>
   <!-- compiled css output -->
   <link href="css/ionic.app.css" rel="stylesheet">
@@ -19,18 +22,20 @@
   <script src="cordova.js"></script>
   <script src='lib/angular-simple-logger/dist/index.js'></script>
 
-  <!--<script async defer-->
-          <!--src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4KlUuej_XNDxUr3g1_KM1izg4ARytjTk&callback=initMap">-->
-  <!--</script>-->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4KlUuej_XNDxUr3g1_KM1izg4ARytjTk&sensor=true">
+
+  </script>
 
 
-  <script src='lib/angular-google-maps/dist/angular-google-maps_dev_mapped.min.js'></script>
-  <script src='lib/angular-google-maps/dist/angular-google-maps.min.js'></script>
+  <!--<script src='lib/angular-google-maps/dist/angular-google-maps_dev_mapped.min.js'></script>
+  <script src='lib/angular-google-maps/dist/angular-google-maps.min.js'></script>-->
 
   <!-- your app's js -->
   <script src="js/app.js"></script>
 </head>
+
 <body ng-app="starter">
-<ion-nav-view></ion-nav-view>
+  <ion-nav-view></ion-nav-view>
 </body>
+
 </html>
