Added easier dynamic view titles. Disabled swipe-back to last view.  Changed back button text/icon.  Added dank splash screen.

--- a/www/app/locations/location-detail/location-detail.html
+++ b/www/app/locations/location-detail/location-detail.html
@@ -1,4 +1,5 @@
-<ion-view view-title="{{ctrl.location.name}}">
+<ion-view can-swipe-back="false">
+    <ion-nav-title>{{ctrl.title}}</ion-nav-title>
     <ion-content overflow-scroll="true">
         <div class="list">
             <label class="item item-input item-stacked-label item-text-wrap">
