--- a/www/app/locations/locations-list/locations-list.html
+++ b/www/app/locations/locations-list/locations-list.html
@@ -1,5 +1,6 @@
-<ion-view view-title="{{ctrl.locationType.name}}">
-    <ion-content>
+<ion-view can-swipe-back="false">
+    <ion-nav-title>{{ctrl.locationType.name}}</ion-nav-title>
+    <ion-content overflow-scroll="true" >
         <div class="list">
             <label class="item item-input item-select">
                 <div class="input-label">
