--- a/www/app/locations/location-detail/location-detail.html
+++ b/www/app/locations/location-detail/location-detail.html
@@ -1,5 +1,5 @@
 <ion-view can-swipe-back="false">
-    <ion-nav-title>{{ctrl.title}}</ion-nav-title>
+    <ion-nav-title>{{ctrl.location.name}}</ion-nav-title>
     <ion-content overflow-scroll="true">
         <div class="list">
             <label class="item item-input item-stacked-label item-text-wrap">
@@ -22,6 +22,5 @@
         </div>
         <h4>Location</h4>
         <div class="mapClass" data-tap-disabled="true"></div>
-        
     </ion-content>
 </ion-view>
