--- a/www/index.html
+++ b/www/index.html
@@ -19,15 +19,7 @@
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
   <script src='lib/angular-simple-logger/dist/index.js'></script>
-
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4KlUuej_XNDxUr3g1_KM1izg4ARytjTk&sensor=true">
-
-  </script>
-
-
-  <!--<script src='lib/angular-google-maps/dist/angular-google-maps_dev_mapped.min.js'></script>
-  <script src='lib/angular-google-maps/dist/angular-google-maps.min.js'></script>-->
-
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4KlUuej_XNDxUr3g1_KM1izg4ARytjTk&sensor=true"></script>
   <!-- your app's js -->
   <script src="js/app.js"></script>
 </head>
