--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
   <!-- Enable all requests, inline styles, and eval() -->
-  <!--<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">-->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com http://www.downtownchattanooga.org/feeds/mapdata.json.html; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.gstatic.com https://*.googleapis.com; style-src 'self' 'unsafe-inline' https://*.googleapis.com https://*.gstatic.com; media-src *; img-src 'self' https://*.gstatic.com https://*.googleapis.com data:; font-src 'self' https://*.googleapis.com https://*.gstatic.com">
   <title></title>
   <!-- compiled css output -->
   <link href="css/ionic.app.css" rel="stylesheet">
