--- a/www/app/menu.html
+++ b/www/app/menu.html
@@ -25,6 +25,9 @@
         <ion-item nav-clear menu-close ui-sref="app.shops">
           Shops
         </ion-item>
+        <ion-item nav-clear menu-close ui-sref="app.map">
+          Map of Chattanooga
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
