Implemented text search.

--- a/www/app/home/home.html
+++ b/www/app/home/home.html
@@ -1,14 +1,23 @@
 <ion-view>
     <ion-content padding="true">
         <div class="riconlogo" style="font-size: 20em; text-align: center; background-color: #95D3C3; border-radius: 2px;"></div>
-        <button class="button button-block button-royal" ui-sref="app.entertainment">
-            Entertainment
+        <button class="button button-block bluff-view" ui-sref="app.bluffview">
+            Bluff View
         </button>
-        <button class="button button-block button-assertive" ui-sref="app.restaurants">
-            Restaurants
+        <button class="button button-block city-center" ui-sref="app.citycenter">
+            City Center
         </button>
-        <button class="button button-block button-balanced" ui-sref="app.shops">
-            Shops
+        <button class="button button-block northshore" ui-sref="app.northshore">
+            Northshore
+        </button>
+        <button class="button button-block riverfront" ui-sref="app.riverfront">
+            Riverfront
+        </button>
+        <button class="button button-block southside" ui-sref="app.southside">
+            Southside
+        </button>
+        <button class="button button-block utc-mlk" ui-sref="app.utcmlk">
+            UTC/MLK
         </button>
     </ion-content>
 </ion-view>
