--- a/www/app/menu.html
+++ b/www/app/menu.html
@@ -16,14 +16,23 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item nav-clear menu-close ui-sref="app.entertainment">
-          Entertainment
+        <ion-item nav-clear menu-close ui-sref="app.bluffview">
+          Bluff View
         </ion-item>
-        <ion-item nav-clear menu-close ui-sref="app.restaurants">
-          Restaurants
+        <ion-item nav-clear menu-close ui-sref="app.citycenter">
+          City Center
         </ion-item>
-        <ion-item nav-clear menu-close ui-sref="app.shops">
-          Shops
+        <ion-item nav-clear menu-close ui-sref="app.northshore">
+          Northshore
+        </ion-item>
+        <ion-item nav-clear menu-close ui-sref="app.riverfront">
+          Riverfront
+        </ion-item>
+        <ion-item nav-clear menu-close ui-sref="app.southside">
+          Southside
+        </ion-item>
+        <ion-item nav-clear menu-close ui-sref="app.utcmlk">
+          UTC/MLK
         </ion-item>
         <ion-item nav-clear menu-close ui-sref="app.map">
           Map of Chattanooga
