Added markers to chattanooga map. Initialized chattanooga map at the right time.

--- a/www/app/locations/location-detail/location-detail.html
+++ b/www/app/locations/location-detail/location-detail.html
@@ -16,6 +16,6 @@
                 </p>
             </label>
         </div>
-        <div class="mapClass" data-tap-disabled="true"></div>
+        <div class="mapClass" id="locationmap" data-tap-disabled="true"></div>
     </ion-content>
 </ion-view>
