Added the ability to open a location in google maps.

--- a/www/app/locations/location-detail/location-detail.html
+++ b/www/app/locations/location-detail/location-detail.html
@@ -17,5 +17,6 @@
             </label>
         </div>
         <div class="mapClass" id="locationmap" data-tap-disabled="true"></div>
+        <a class="button button-block button-default" href="geo:{{ctrl.location.latitude}}, {{ctrl.location.longitude}}">Open in Google Maps</a>
     </ion-content>
 </ion-view>
