Fixed map sizing. Made links show up. Menu title navigates to home screen. Button for full map on home screen.

--- a/www/app/home/home.html
+++ b/www/app/home/home.html
@@ -23,5 +23,8 @@
         <button class="button button-block utc-mlk" ui-sref="app.utcmlk">
             UTC/MLK
         </button>
+        <button class="button button-block map-button" ui-sref="app.map">
+            Map of Chattanooga
+        </button>
     </ion-content>
 </ion-view>
