--- a/www/app/map/map.html
+++ b/www/app/map/map.html
@@ -1,6 +1,6 @@
 <ion-view can-swipe-back="false">
     <ion-nav-title>Map of Chattanooga</ion-nav-title>
     <ion-content overflow-scroll="true">
-        <div class="mapClass" id="chattanoogamap" data-tap-disabled="true"></div>
+        <div class="full-map" id="chattanoogamap" data-tap-disabled="true"></div>
     </ion-content>
 </ion-view>
