--- a/www/app/locations/location-detail/location-detail.html
+++ b/www/app/locations/location-detail/location-detail.html
@@ -16,7 +16,7 @@
                 </p>
             </label>
         </div>
-        <div class="mapClass" id="locationmap" data-tap-disabled="true"></div>
+        <div class="details-map" id="locationmap" data-tap-disabled="true"></div>
         <a class="button button-block button-default" href="geo:{{ctrl.location.latitude}}, {{ctrl.location.longitude}}">Open in Google Maps</a>
     </ion-content>
 </ion-view>
