--- a/www/app/menu.html
+++ b/www/app/menu.html
@@ -12,7 +12,7 @@
   </ion-side-menu-content>
   <ion-side-menu side="left">
     <ion-header-bar class="bar-royal">
-      <h1 class="title">Explore Chattanooga</h1>
+      <h1 class="title" ui-sref="home">Explore Chattanooga</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
