--- a/www/app/locations/location-detail/location-detail.html
+++ b/www/app/locations/location-detail/location-detail.html
@@ -14,6 +14,6 @@
             </label>
         </div>
         <div class="details-map" id="locationmap" data-tap-disabled="true"></div>
-        <a class="button button-block button-default" href="geo:{{ctrl.location.latitude}}, {{ctrl.location.longitude}}">Directions</a>
+        <button class="button button-block button-default" ng-click="ctrl.openMap()">Directions</button>
     </ion-content>
 </ion-view>
